EB-7193: checkout page alignment issues fix

--- a/src/WebChannel/main/webapp/xpedx/css/global/GLOBAL.css
+++ b/src/WebChannel/main/webapp/xpedx/css/global/GLOBAL.css
@@ -4827,8 +4827,9 @@ div.mini-cart-header tr {
 }
 #checkout-table-header td {
     background-color: #003399;
-    padding: 10px;
+    padding: 4px 1px 1px;
     width: 100%;
+    height: 20px;
 }
 #articletable tr {
     border-left: 1px solid #CCCCCC;
